Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122273

[MediaPlayerApp] The file names on the playlist in the app have specific format on Android

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.5.6, 6.7.1, 6.8.0 FF
    • 6.6.1, 6.7.0 Beta2
    • Examples and Demos
    • None
    • Android
    • 252e19f0c (dev), 96ee261e6 (6.7), d35adfb63 (tqtc/lts-6.5), dbd33f139 (dev), c85c1743a (6.7)
    • 2024wk10FOQtforAndroid, 2024wk12FOQtforAndroid, 2024wk14FOQtforAndroid, 2024wk16FOQtforAndroid

      MacOS 14.3

      Qt Creator 12.0.1

      Qt 6.7.0-beta2

       

      Device: Samsung Galaxy S22 13.0, Pixel 3a 12.0

      Steps to reproduce:

      1. Build the media player example app. 
      2. Run the app on Android device.
      3. Add audio or video file to the playlist.
      4. Check the file names.

      Expected: The playlist should contain original file names.

      Actual: The file names are formatted - see attached screenshots.

      Reproducibility:  100% **
       

        1. mediaplayer.png
          mediaplayer.png
          342 kB
        2. Playlist_formated.jpg
          Playlist_formated.jpg
          186 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bartlomiejmoskal Bartlomiej Moskal
            lkos Łukasz Kosiorowski
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes