examples/demos/mediaplayer/main.cpp
@@ -8,6 +8,8 @@
 #include <QMediaFormat>
 #include <QMimeType>
 
+#include "filenameprovider.h"
+
 #include <algorithm>
 
 using namespace Qt::Literals::StringLiterals;
@@ -49,6 +51,13 @@ static NameFilters nameFilters()
 int main(int argc, char *argv[])
 {
     QGuiApplication app(argc, argv);
+
+    qmlRegisterSingletonType<FileNameProvider>("io.qt.filenameprovider", 1, 0, "FileNameProvider",
+        [] (QQmlEngine *engine, QJSEngine *scriptEngine) -> QObject * {
+            static auto * provider = new FileNameProvider();
+            return provider;
+        }
+    );
 
     QCoreApplication::setApplicationName("MediaPlayer Example");
     QCoreApplication::setOrganizationName("QtProject");
